--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,14 @@ button {
 }
 
 table {
+    width: 100%;
     border-collapse: collapse;
 }
 
 
 table th,td {
  border-bottom: 1px solid #d8d7d7;  
- padding: 12px 15px;
+ padding: 12px 30px;
  text-align: left;
 }
 
